  - added option to display track bearing line in map
  - optional transparent airspace rendering
  - terrain ramp auto-scaling disabled
* data files
  - support for SeeYou .CUP task files in the task manager
  - support for GPSDump/FS FormatGEO and FormatUTM waypoint files (.wpt)
  - support for OziExplorer/CompeGPS waypoint files (.wpt)
  - wing area field is read from extended polar files if available
  - zander files: description field is used for additional airport detection
  - added frequency parsing for airspace files
    - TNP: RADIO field
    - OpenAir: AR command
  - the frequency and runway heading/length given in cup files are now displayed
  - use runway heading and length contained in cup waypoint files
  - for WELT2000 generated winpilot waypoint files (.dat) use runway heading
* task
  - new Task Manager and calculator dialogs
  - FAI Triangle filter when adding turnpoints
  - added BGA start point sector
  - added AAT inner radius sector
  - configurable alternate sorting 
    - by arrival altitude
    - along task direction
    - along home direction
  - "long-click" in task turnpoint zone displays Target dialog
  - "arm advance" menu buttons removed.  Next/previous buttons function as normal
    for turnpoints (including startpoints) not requiring arming, for those that do
    require arm, "next" reads and functions as "arm" on first press and once armed,
    reads and functions as "next".  "previous" reads and functions as "previous" if
    not armed, "disarm" if armed.
  - time margin of AAT optimisation is configurable under "Default task turnpoints" page, expert mode
    as "Optimisation Margin" option.
  - auto goto task: when no task is defined then on takeoff, if there is a waypoint
    within 1km of the takeoff location, a goto task pointing back to this location
    is automatically created.
* infoboxes
  - new graphical infoboxes
    - barogram
    - vario trace
    - netto vario trace
    - thermal circling trace
    - thermal band