@@ -63,6 +63,7 @@ Version 6.1 - not yet released
   - support for SeeYou .CUP task files in the task manager
   - support for GPSDump/FS FormatGEO and FormatUTM waypoint files (.wpt)
   - support for OziExplorer/CompeGPS waypoint files (.wpt)
+  - added airspace class G
   - wing area field is read from extended polar files if available
   - zander files: description field is used for additional airport detection
   - added frequency parsing for airspace files
